--- a/source/scss/base/_app.scss
+++ b/source/scss/base/_app.scss
@@ -8,8 +8,6 @@ $grey-text: #aaa;
 $black: #000;
 $white: #fff;
 
-$left-margin: 8rem;
-
 html {
   font-size: 10px;
   width: 100%;
@@ -117,52 +115,67 @@ button:hover {
   padding-bottom: 2rem;
   margin: 0 auto 2rem;
   width: 100%;
-
-  @include lg {
-
-
-  }
-}
-
-.DiceMenu-toggle-image {
-  position: absolute;
-  left: 1rem;
-  top: 1rem;
-  display: block;
-  width: 6rem;
-  height: 6rem;
 }
 
 .DiceMenu {
   position: absolute;
+  box-sizing: border-box;
   bottom: 0;
   top: 0;
   left: 0;
-  border-right: 1px solid $grey-border;
-  width: $left-margin;
-  padding: 1rem;
+  width: 0;
+  padding: 0;
+  margin: 0;
   overflow: hidden;
-  transition: background 0.5s, width 0.5s;
-  background: white;
 }
 
 .DiceMenu--open {
   width: 100%;
-  background: rgba(255,255,255,0.85);
-  border: none;
+  .DiceMenu--menu {
+    left: 0;
+  }
+}
+
+.DiceMenu--shadow {
+  position:absolute;
+  left:0;
+  top:0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.20);
+}
+
+.DiceMenu--menu {
+  position:absolute;
+  left: -60%;
+  width: 20rem;
+  height: 100%;
+  background: #8A0707;
+  box-shadow: 0 0 15px black;
+  transition: left 0.5s;
 }
 
 .LinkMenu {
   background: white;
+  text-align: center;
   opacity: 1;
   width: 100%;
   z-index: 100;
 }
 
+.LinkMenu-die-image {
+  position: absolute;
+  left: 1rem;
+  top: 1rem;
+  display: inline-block;
+  width: 3rem;
+  height: 3rem;
+}
+
 .LinkMenu-title {
   font-family: $font-family-cursive;
-  font-size: 4rem;
-  margin-right: 1.5rem;
+  font-size: 3rem;
+  margin: 0;
 }
 
 .LinkMenu-link {
@@ -182,9 +195,9 @@ button:hover {
   position: absolute;
   box-sizing: border-box;
   padding: 1rem;
-  width: calc( 100% - 8rem );
+  width: 100%;
   height: 100%;
-  left: $left-margin;
+  left: 0;
   top: 0;
 }
 
