--- a/source/scss/base/_app.scss
+++ b/source/scss/base/_app.scss
@@ -65,10 +65,6 @@ a {
   color: $grey-text;
 }
 
-a:hover {
-  color: $black;
-}
-
 h1,
 h2,
 h3 {
@@ -166,20 +162,23 @@ button:hover {
 .LinkMenu-die-image {
   position: absolute;
   left: 1rem;
-  top: 1rem;
+  top: 0.5rem;
   display: inline-block;
-  width: 3rem;
-  height: 3rem;
+  width: 4rem;
+  height: 4rem;
 }
 
 .LinkMenu-title {
   font-family: $font-family-cursive;
-  font-size: 3rem;
+  font-size: 4rem;
   margin: 0;
 }
 
 .LinkMenu-link {
-  display: inline-block;
+  display: block;
+  width: 100%;
+  text-align: center;
+  clear: both;
   padding: 1rem 0 1rem 0;
   font-family: $font-family-cursive;
   margin-right: 1.5rem;
@@ -188,17 +187,21 @@ button:hover {
 }
 
 .LinkMenu-link--active {
-  color: $black;
+  color: white;
 }
 
 .Page {
   position: absolute;
   box-sizing: border-box;
-  padding: 1rem;
+  padding: 0;
   width: 100%;
   height: 100%;
   left: 0;
   top: 0;
+}
+
+.Content {
+  padding: 1rem;
 }
 
 .Example {
